Fix error in stylesheet declaration

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Obversa</title>
-    <link rel="stylesheet" href="/styles/obversa.css" %>
+    <link rel="stylesheet" href="/styles/obversa.css">
   </head>
   <body>
     <header>
