--- a/views/products/index.erb
+++ b/views/products/index.erb
@@ -1,8 +1,1 @@
-<div class="products">
-  <% @products.each do |product| %>
-    <div class="product">
-      <h2><%= product["name"] %></h2>
-      <p><%= product["price"] %></h2>
-    </div>
-  <% end %>
-</div>
+<%= erb :"shared/_product_list" %>
