--- a/views/shared/_product_list.erb
+++ b/views/shared/_product_list.erb
@@ -1,7 +1,7 @@
 <div class="products">
   <% @products.each do |product| %>
     <div class="product">
-      <h2><%= product["name"] %></h2>
+      <h2><a href="/products/<%= product['slug'] %>"><%= product["name"] %></a></h2>
       <p><%= product["price"] %></h2>
     </div>
   <% end %>
