--- a/views/products/show.erb
+++ b/views/products/show.erb
@@ -1,1 +1,28 @@
-<h1><%= @product["name"] %></h1>
+<div class="product-details">
+  <h1><%= @product["name"] %></h1>
+  <p><%= @product["price"] %></p>
+</div>
+
+<form class="product-form" action="/line-items" method="post">
+  <% if @product["variants"].any? %>
+    <% @product["variants"].each do |variant| %>
+      <label for="<%= variant['id']%>">
+        <input
+          type="radio"
+          value="<%= variant['id']%>"
+          id="<%= variant['id']%>"
+          name="variant"
+          <% if variant == @product["variants"].first %>checked="true"<% end %>
+          required>
+        <%= variant["option_values"].map { |v| v["name"] }.join(" ") %>
+      </label>
+    <% end %>
+  <% end %>
+
+  <div>
+    <label for="quantity">Quantity:</label>
+    <input type="text" name="quantity" value="1" required>
+  </div>
+
+  <button>Add to Cart</button>
+</form>
